--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>qml/CheckBtn.qml</file>
         <file>qml/SliderProgress.qml</file>
         <file>qml/LineEdit.qml</file>
+        <file>qml/ClickBtn.qml</file>
     </qresource>
 </RCC>
