--- a/res.qrc
+++ b/res.qrc
@@ -1,6 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>res/Qt.png</file>
         <file>res/close.png</file>
+        <file>res/bilibili.png</file>
+        <file>res/web.png</file>
+        <file>res/ten_OvO.png</file>
+        <file>res/key.png</file>
+        <file>res/github.png</file>
     </qresource>
 </RCC>
