--- a/cache.qrc
+++ b/cache.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>cache/setting.json</file>
         <file>cache/socket.json</file>
+        <file>cache/theme.json</file>
     </qresource>
 </RCC>
