--- a/qss/MainWindow.qss
+++ b/qss/MainWindow.qss
@@ -1,7 +1,7 @@
 QWidget#centralwidget{
     background-color: qlineargradient(
         x1:0, y1:0, x2:1, y2:1,
-        stop:0 #c0604962, stop:1 #c00C1824);
+        stop:0 %1, stop:1 %2);
     border: 1px solid white;
     border-color: rgba(255, 255, 255, 128);
 }
